Add job removal feature and enhance job search functionality
- Introduced a new API endpoint for removing jobs from the user's display, allowing for better management of job listings.
- Updated the job search functionality to include tailored document checks, improving user experience by indicating which jobs have associated documents.
- Enhanced the frontend to support job removal actions, including UI updates for job cards and integration with the backend API.
- Added a technical stack documentation file to outline the technologies used in the project, providing clarity on the system architecture and components.

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -93,6 +93,7 @@
       <a href="#" id="openSettings">Settings</a>
     </div>
   </div>
+  <script src="utils.js"></script>
   <script src="popup.js"></script>
 </body>
 </html> 
