--- a/extension/settings.html
+++ b/extension/settings.html
@@ -120,6 +120,7 @@
         <button id="save-settings">Save Settings</button>
         <div id="status" class="status"></div>
     </div>
+    <script src="utils.js"></script>
     <script src="settings.js"></script>
 </body>
 </html> 
